--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ header p {
 
 .gallery-item-info {
     padding: 15px;
+    text-align: center;
 }
 
 .gallery-item-info h3 {
@@ -64,6 +65,21 @@ header p {
 .gallery-item-info p {
     font-size: 1em;
     color: #666;
+}
+
+.gallery-item-info button {
+    margin-top: 10px;
+    padding: 10px 15px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+.gallery-item-info button:hover {
+    background-color: #555;
 }
 
 /* Footer Styling */
