--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     /*background-color: #f4f4f4;*/
     background-image: url("https://wallpapers.com/images/featured/ultra-hd-wazf67lzyh5q7k32.jpg");
     background-repeat: no-repeat;
+    background-cover: cover;
     color: #333;
 }
 
